--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -31,13 +31,8 @@
   font-size: 1.5rem;
 }
 
-.banner h2:last-child {
-  position: absolute;
-  top: 30%;
-  left: 5%;
-}
-
-.banner-desktop {
+.banner-desktop, 
+.display-none {
   display: none;
 }
 
@@ -49,12 +44,16 @@
     border-radius: 12px;
   }
 
-  .banner h2{
+  .banner h2 {
     text-align: center;
     font-size: 2.2rem;
     width: 100%;
     top: 20%;
     left: 0;
+  }
+
+  br {
+    display: none;
   }
 
   .banner-desktop {
