--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -22,16 +22,31 @@
 
 .collapse button {
   margin-right: 5px;
+  animation-fill-mode: forwards;
 }
 
-.fa-chevron-up,
-.fa-chevron-down {
+.collapse button:active {
+  animation-name: rotate;
+  animation-duration: 0.3s;
+}
+
+.show {
+  display: block;
+  transition: 0.5s all;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-180deg);
+  }
+}
+
+.fa-chevron-up {
   font-size: 1rem;
   color: white;
-}
-
-.fa-chevron-down {
-  display: none;
 }
 
 .collapse p {
@@ -53,8 +68,7 @@
     margin-right: 10px;
   }
 
-  .fa-chevron-up,
-  .fa-chevron-down {
+  .fa-chevron-up {
   font-size: 1.2rem;
   }
 }
@@ -79,8 +93,7 @@
     margin-right: 15px;
   }
 
-  .fa-chevron-up,
-  .fa-chevron-down {
+  .fa-chevron-up {
     font-size: 1.5rem;
   }
 }
