--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,15 @@ button {
   border: none;
   background-color: transparent;
 }
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
 @media (min-width: 768px) {
   nav,
   main {
