--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -6,7 +6,7 @@
 .collapse li {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-content: center;
   flex-wrap: wrap;
   height: 30px;
   background-color: #FF6060;
