--- a/src/pages/accommodationpage/accommodationpage.css
+++ b/src/pages/accommodationpage/accommodationpage.css
@@ -20,23 +20,15 @@
 
 .accommodationpage div {
   display: flex;
-  flex-direction: row-reverse;
   align-items: center;
+  justify-content: space-between;
 }
 
-.accommodationpage div li:last-child{
-  width: 100%;
-}
-
-.accommodationpage i:not(.collapse i) {
-  color: #FF6060;
-}
-
-.collapse {
+.accommodationpage .collapse {
   margin-bottom: 50px;
 }
 
-.collapse li:first-child {
+.accommodationpage .collapse li:first-child {
   margin-top: 0px;
 }
 
@@ -53,21 +45,21 @@
   color: white;
   background-color: #FF6060;
   border-radius: 5px;
-  margin-right: 10px;
+  margin: 5px 10px 5px 0;
 }
 
 .host-name {
   color: #FF6060;
   text-align: right;
   margin-right: 10px;
+  width: 60px;
 }
 
 @media (min-width: 768px) {
   .accommodationpage div {
+    justify-content: normal;
     position: absolute;
-    flex-wrap: wrap;
-    right: 30px;
-    width: 200px;
+    right: 15px;
   }
 
   .tag {
@@ -77,23 +69,21 @@
     border-radius: 7px;
   }
 
-  .collapse h2 {
+  .accommodationpage .collapse h2 {
     font-size: 1rem;
   }
 
-  .accommodationpage img{
+  .accommodationpage img {
     width: 48px;
     height: 48px;
   }
 
-  .accommodationpage div li:last-child {
-    width: auto;
-    margin-top: 20px;
+  .accommodationpage div div:not(.rating) {
+    margin-top: 50px;
   }
 
-  .accommodationpage i:not(.collapse i) {
-    margin-right: 5px;
-    font-size: 1.5rem;
+  .rating {
+    top: 55px;
   }
 }
 
@@ -107,19 +97,19 @@
     font-size: 2.3rem;
   }
 
-  .collapse {
+  .accommodationpage .collapse {
     flex-direction: row;
     gap: 50px;
     width: 100%;
   }
 
-  .collapse li {
+  .accommodationpage .collapse li {
     width: 100%;
     margin: 0;
     border-radius: 10px;
   }
 
-  .collapse h2 {
+  .accommodationpage .collapse h2 {
     font-size: 1.2rem;
   }
 
@@ -141,6 +131,10 @@
   }
 
   .accommodationpage div {
-    right: 80px;
+    right: 40px;
+  }
+
+  .rating {
+    top: 65px;
   }
 }
