--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -3,14 +3,15 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 30px;
+  margin-top: 10px;
 }
 
 .card-container figure {
   position: relative;
-  width: 335px;
+  width: 100%;
   height: 255px;
   border-radius: 10px;
-  margin: 10px 0;
 }
 
 .card-container img {
@@ -25,28 +26,30 @@
   bottom: 10px;
   left: 5px;
   right: 5px;
-  font-size: 1.1rem;
   margin-top: 10px;
-  color : transparent;
-  background: linear-gradient(black, white);
+  color : white;
   background-clip: text;
   font-weight: 700;
+  z-index: 2;
+  max-height: 11%;
+  min-height: 7%;
 }
 
 .card-container div {
-  display: contents;
+  position: absolute;
+  background: rgba(0, 0, 0, .5);
+  border-radius: 0 0 10px 10px;
+  z-index: 2;
+  bottom: 0px;
+  height: 15%;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
 
-  .card-container {
-    justify-content: space-evenly;
-  }
-
   .card-container figure {
-    width: 340px;
+    width: calc((100% - 30px) / 2);
     height: 300px;
-    margin: 7px 0;
   }
 
 }
@@ -58,8 +61,7 @@
   }
 
   .card-container figure {
-    width: 340px;
+    width: calc((100% - 60px) / 3);
     height: 340px;
-    margin: 30px;
   }
 }
